<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#FFD600"
    tools:context=".main.activities.ChecagemLogin_Activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="15dp"
        android:background="#FFC652"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvMensagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:text="@string/bem_vindo"
            android:textAlignment="center"
            android:textColor="#D50000"
            android:textColorLink="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edT_Login"
            android:layout_width="271dp"
            android:layout_height="64dp"

            android:layout_marginTop="4dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/ex_alberto"
            android:inputType="textPersonName"
            android:textAlignment="textStart"
            android:textColor="#DD2C00"
            android:textColorHint="#7EDD2C00"
            android:textColorLink="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/edt_Pass"
            android:layout_width="271dp"
            android:layout_height="64dp"
            android:layout_marginTop="4dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/ex_123"
            android:inputType="text"
            android:textAlignment="textStart"
            android:textColor="#DD2C00"
            android:textColorHint="#7EDD2C00"
            android:textColorLink="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            android:textColor="#D50000"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/edT_Login"
            app:layout_constraintTop_toBottomOf="@+id/tvMensagem" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/senha"
            android:textColor="#D50000"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/edT_Login"
            app:layout_constraintTop_toBottomOf="@+id/edT_Login" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/ou"
            android:textColor="#D50000"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEsqueceuSenha" />

        <Button
            android:id="@+id/btLogar"
            android:layout_width="271dp"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:background="#DD2C00"
            android:text="@string/entrar"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_Pass" />

        <TextView
            android:id="@+id/tvEsqueceuSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:autoLink="all"
            android:linksClickable="false"
            android:selectAllOnFocus="false"
            android:text="@string/esqueceu_a_senha"
            android:textColor="#DD2C00"
            android:textColorLink="#AA00FF"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btLogar" />

        <Button
            android:id="@+id/btNovo"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginTop="4dp"
            android:background="#FFAB00"
            android:text="@string/inscrever_se"
            android:textColor="#DD2C00"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>